--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,14 +2,34 @@
     height: 75vh;
     font-size: 1.5em;
     background-color: rgba(0, 0, 0, 0.3);
-    background-image: url('../../../public/assets/img/banner/HomePageBanner.jpg'); /* Directly provide the image URL here */
+    background-image: url('../../../public/assets/img/banner/HomePageBanner.jpg');
+    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/assets/img/banner/HomePageBanner.jpg'); */
+
+    /* Directly provide the image URL here */
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
+
+/* Add this CSS to your home.css file */
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important; /* Set the color of navigation arrows to white */
+}
 
 
+.banner_date {
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 28px;
+}
+
+.banner_heading {
+    font-size: 64px;
+    line-height: 56px;
+    font-weight: 500;
+}
 
 .about-items {
     display: flex;
@@ -24,7 +44,7 @@
     align-items: center;
     padding: 10px;
     max-width: 360px;
-    height: 300px;
+    height: 200px;
     justify-content: center;
     margin: 0 auto;
     color: black;
@@ -39,10 +59,10 @@
 }
 
 .module_item-title--grow-underline {
-    font-size: 1.5em;
+    font-size: 18px;
     font-weight: 500;
     position: relative;
- margin-bottom: 28px;
+    margin-bottom: 16px;
     /* Position relative to allow absolute positioning of line */
 }
 
@@ -66,7 +86,7 @@
 }
 
 .about-description {
-    font-size: 1em;
+    font-size: 12px;
 }
 
 
@@ -75,31 +95,33 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap */
-  }
-  
-  .about-item-container {
+    flex-wrap: wrap;
+    /* Allow items to wrap */
+}
+
+.about-item-container {
     position: relative;
-  }
-  
-  .about-item {
-    padding: 20px;
-    max-width: 350px;
+}
+
+.about-item {
+    padding: 10px;
+    max-width: 300px;
     margin: 10px;
     color: black;
     background-color: whitesmoke;
     transition: all 0.3s ease;
-  }
-  
-  .about-item:hover {
-    background-color: lightgray; /* Change background color on hover */
-  }
-  
-  .about-item .about-heading {
-    font-size: 1.5em;
-    font-weight: 500;
-  }
-  
-  .about-item .about-date {
+}
+
+.about-item:hover {
+    background-color: lightgray;
+    /* Change background color on hover */
+}
+
+.about-item .about-heading {
     font-size: 1em;
-  }
+    font-weight: 500;
+}
+
+.about-item .about-date {
+    font-size: 1em;
+}
