--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,14 +1,35 @@
 .home-banner {
-    height: 75vh;
-    font-size: 1.5em;
-    background-color: rgba(0, 0, 0, 0.3);
-    background-image: url('../../../public/assets/img/banner/HomePageBanner.jpg'); /* Directly provide the image URL here */
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  height: 75vh;
+  font-size: 1.5em;
+  background-color: rgba(0, 0, 0, 0.3);
+  /* background-image: url('../../../public/assets/img/banner/HomePageBanner.jpg'); */
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/assets/img/banner/HomePageBanner.jpg');
 
+  /* Directly provide the image URL here */
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Add this CSS to your home.css file */
+.swiper-button-next,
+.swiper-button-prev {
+color: white !important; /* Set the color of navigation arrows to white */
+}
+
+
+.banner_date {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 28px;
+}
+
+.banner_heading {
+  font-size: 64px;
+  line-height: 56px;
+  font-weight: 500;
+}
 
 
 .about-items {
