working on the headers and the footers

--- a/public/assets/scss/layout/_mainmenu.scss
+++ b/public/assets/scss/layout/_mainmenu.scss
@@ -30,8 +30,8 @@
                 display: inline-block;
                 font-size: 18px;
                 color: var(--bd-common-black);
-                padding: 26px 0;
-                line-height: 36px;
+                // padding: 26px 0;
+                // line-height: 36px;
                 text-transform: uppercase;
                 letter-spacing: .05em;
                 font-weight: var(--bd-fw-medium);
