--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -31,96 +31,97 @@ color: white !important; /* Set the color of navigation arrows to white */
   font-weight: 500;
 }
 
-
 .about-items {
-    display: flex;
+  display: flex;
 
-    justify-content: space-evenly;
-    align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .about-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    max-width: 360px;
-    height: 300px;
-    justify-content: center;
-    margin: 0 auto;
-    color: black;
-    background-color: whitesmoke;
-    text-align: center;
-    transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  max-width: 360px;
+  height: 200px;
+  justify-content: center;
+  margin: 0 auto;
+  color: black;
+  background-color: whitesmoke;
+  text-align: center;
+  transition: all 0.3s ease;
 }
 
 .about-item:hover {
-    background-color: lightgray;
-    /* Change background color on hover */
+  background-color: lightgray;
+  /* Change background color on hover */
 }
 
 .module_item-title--grow-underline {
-    font-size: 1.5em;
-    font-weight: 500;
-    position: relative;
- margin-bottom: 28px;
-    /* Position relative to allow absolute positioning of line */
+  font-size: 18px;
+  font-weight: 500;
+  position: relative;
+  margin-bottom: 16px;
+  /* Position relative to allow absolute positioning of line */
 }
 
 .module_item-title--grow-underline::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
-    width: 40%;
-    height: 2px;
-    background: #1b95e0;
-    /* Change color to blue */
-    transition: width 0.3s ease;
-    /* Transition width for smooth animation */
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 40%;
+  height: 2px;
+  background: #1b95e0;
+  /* Change color to blue */
+  transition: width 0.3s ease;
+  /* Transition width for smooth animation */
 }
 
 .module_item-title--grow-underline:hover::after {
-    width: 100%;
-    /* Grow width to fill on hover */
+  width: 100%;
+  /* Grow width to fill on hover */
 }
 
 .about-description {
-    font-size: 1em;
+  font-size: 12px;
 }
 
 
 
 .about-items {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap */
-  }
-  
-  .about-item-container {
-    position: relative;
-  }
-  
-  .about-item {
-    padding: 20px;
-    max-width: 350px;
-    margin: 10px;
-    color: black;
-    background-color: whitesmoke;
-    transition: all 0.3s ease;
-  }
-  
-  .about-item:hover {
-    background-color: lightgray; /* Change background color on hover */
-  }
-  
-  .about-item .about-heading {
-    font-size: 1.5em;
-    font-weight: 500;
-  }
-  
-  .about-item .about-date {
-    font-size: 1em;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* Allow items to wrap */
+}
+
+.about-item-container {
+  position: relative;
+}
+
+.about-item {
+  padding: 10px;
+  max-width: 300px;
+  margin: 10px;
+  color: black;
+  background-color: whitesmoke;
+  transition: all 0.3s ease;
+}
+
+.about-item:hover {
+  background-color: lightgray;
+  /* Change background color on hover */
+}
+
+.about-item .about-heading {
+  font-size: 1em;
+  font-weight: 500;
+}
+
+.about-item .about-date {
+  font-size: 1em;
+}
