--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,16 +1,33 @@
 .home-banner {
-  height: 75vh;
   font-size: 1.5em;
   background-color: rgba(0, 0, 0, 0.3);
   /* background-image: url('../../../public/assets/img/banner/HomePageBanner.jpg'); */
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/assets/img/banner/HomePageBanner.jpg');
-
-  /* Directly provide the image URL here */
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+/* Default height for smaller screens */
+.home-banner {
+  height: 75vh;
+}
+
+/* Adjust height for medium screens */
+@media (min-width: 768px) {
+  .home-banner {
+    height: 100vh;
+  }
+}
+
+/* Adjust height for large screens */
+@media (min-width: 1200px) {
+  .home-banner {
+    height: 85vh;
+  }
+}
+
 
 /* Add this CSS to your home.css file */
 .swiper-button-next,
@@ -21,12 +38,12 @@ color: white !important; /* Set the color of navigation arrows to white */
 
 .banner_date {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   margin-top: 28px;
 }
 
 .banner_heading {
-  font-size: 64px;
+  font-size: 48px;
   line-height: 56px;
   font-weight: 500;
 }
